add Report reportScheduleAllTruckByRow